tests/lean/classBadOutParam.lean.expected.out
classBadOutParam.lean:3:1: error: invalid class, parameter #2 depends on `outParam`, but it is not an `outParam`
